class Player {
    
    constructor(Color) {
        this.color = Color
    }

}

const PlayerColor = {
    Black,
    White
  };